--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
+  <meta charset='utf-8' />
 
   <title>grifo/grifo-jquery-plugins @ GitHub</title>
 
@@ -29,7 +29,6 @@
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
 </head>
-
 <body>
   <a href="http://github.com/grifo/grifo-jquery-plugins"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
@@ -42,17 +41,25 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/grifo/grifo-jquery-plugins">grifo-jquery-plugins</a>
-      <span class="small">by <a href="http://github.com/grifo">grifo</a></span></h1>
+    <h1>
+	    <a href="http://github.com/grifo/grifo-jquery-plugins">grifo-jquery-plugins</a>
+      <span class="small">by <a href="http://github.com/grifo">grifo</a></span>
+    </h1>
 
     <div class="description">
       Common plugins for jQuery
     </div>
+    
+    <h2>Example pages</h2>
+    <ul>
+      <li><a href="jquery.placeholder.html">placeholder</a></li>
+    </ul>
 
     <h2>Authors</h2>
-<p>Ricardo Tomasi (ricardobeat@gmail.com)<br/><br/>      </p>
-<h2>Contact</h2>
-<p> (code@grifotecnologia.com.br)<br/>      </p>
+    <p>Ricardo Tomasi (ricardobeat@gmail.com)</p>
+    
+    <h2>Contact</h2>
+    <p>(code@grifotecnologia.com.br)</p>
 
 
     <h2>Download</h2>
