--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <title>grifo/grifo-jquery-plugins @ GitHub</title>
   
-  <link href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:600' rel='stylesheet' type='text/css'>
   <link href="styles/base.css" rel="stylesheet" />
   
 </head>
