--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset='utf-8' />
+---
+layout: default
+title: Grifo jQuery plugins
+---
 
-  <title>grifo/grifo-jquery-plugins @ GitHub</title>
-  
-  <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:600' rel='stylesheet' type='text/css'>
-  <link href="styles/base.css" rel="stylesheet" />
-  
-</head>
-<body>
   <a href="http://github.com/grifo/grifo-jquery-plugins"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
@@ -30,13 +23,20 @@
       Common plugins for jQuery
     </div>
     
-    <h2>Example pages</h2>
+    <h2>Examples</h2>
     <ul>
       <li><a href="jquery.placeholder.html">placeholder</a></li>
+      <li><a href="jquery.innerLabel.html">innerLabel</a></li>
+      <li><a href="jquery.scrollTo.html">scrollTo</a></li>
+      <li><a href="jquery.accordion.html">accordion</a></li>
+      <li><a href="jquery.tabs.html">tabs</a></li>
     </ul>
 
     <h2>Authors</h2>
-    <p>Ricardo Tomasi (ricardobeat@gmail.com)</p>
+    <p>Ricardo Tomasi (ricardo.tomasi@grifotecnologia.com.br)</p>
+    <p>Marcelo Oliveira (marcelo.oliveira@grifotecnologia.com.br)</p>
+    <p>Renatho Rosa (renatho.rosa@grifotecnologia.com.br)</p>
+    <p>Leandro Barbosa (leandro.barbosa@grifotecnologia.com.br)</p>
     
     <h2>Contact</h2>
     <p>(code@grifotecnologia.com.br)</p>
@@ -58,6 +58,3 @@
     </div>
 
   </div>
-  
-</body>
-</html>
