--- a/index.html
+++ b/index.html
@@ -3,58 +3,51 @@ layout: default
 title: Grifo jQuery plugins
 ---
 
-  <a href="http://github.com/grifo/grifo-jquery-plugins"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <div class="download">
+    <a href="http://github.com/grifo/grifo-jquery-plugins/zipball/master">
+      <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+    <a href="http://github.com/grifo/grifo-jquery-plugins/tarball/master">
+      <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+  </div>
 
-  <div id="container">
+  <div class="description">
+    Common plugins for jQuery
+  </div>
+  
+  <h2>Examples</h2>
+  <ul id="examples">
+    <li><a href="jquery.placeholder.html">placeholder</a></li>
+    <li><a href="jquery.innerLabel.html">innerLabel</a></li>
+    <li><a href="jquery.scrollTo.html">scrollTo</a></li>
+    <li><a href="jquery.accordion.html">accordion</a></li>
+    <li><a href="jquery.tabs.html">tabs</a></li>
+  </ul>
 
-    <div class="download">
-      <a href="http://github.com/grifo/grifo-jquery-plugins/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/grifo/grifo-jquery-plugins/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1>
-	    <a href="http://github.com/grifo/grifo-jquery-plugins">grifo-jquery-plugins</a>
-      <span class="small">by <a href="http://github.com/grifo">grifo</a></span>
-    </h1>
-
-    <div class="description">
-      Common plugins for jQuery
-    </div>
-    
-    <h2>Examples</h2>
-    <ul>
-      <li><a href="jquery.placeholder.html">placeholder</a></li>
-      <li><a href="jquery.innerLabel.html">innerLabel</a></li>
-      <li><a href="jquery.scrollTo.html">scrollTo</a></li>
-      <li><a href="jquery.accordion.html">accordion</a></li>
-      <li><a href="jquery.tabs.html">tabs</a></li>
-    </ul>
-
+  <section id="authors">
     <h2>Authors</h2>
-    <p>Ricardo Tomasi (ricardo.tomasi@grifotecnologia.com.br)</p>
-    <p>Marcelo Oliveira (marcelo.oliveira@grifotecnologia.com.br)</p>
-    <p>Renatho Rosa (renatho.rosa@grifotecnologia.com.br)</p>
-    <p>Leandro Barbosa (leandro.barbosa@grifotecnologia.com.br)</p>
-    
-    <h2>Contact</h2>
-    <p>(code@grifotecnologia.com.br)</p>
+    <ul>
+      <li>Ricardo Tomasi (ricardo.tomasi@grifotecnologia.com.br)
+      <li>Marcelo Oliveira (marcelo.oliveira@grifotecnologia.com.br)
+      <li>Renatho Rosa (renatho.rosa@grifotecnologia.com.br)
+      <li>Leandro Barbosa (leandro.barbosa@grifotecnologia.com.br)
+    </ul>
+  </section>
+  
+  <h2>Contact</h2>
+  <p>(code@grifotecnologia.com.br)</p>
 
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/grifo/grifo-jquery-plugins/zipball/master">zip</a> or
-      <a href="http://github.com/grifo/grifo-jquery-plugins/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/grifo/grifo-jquery-plugins</pre>
-    </p>
+  <h2>Download</h2>
+  <p>
+    You can download this project in either
+    <a href="http://github.com/grifo/grifo-jquery-plugins/zipball/master">zip</a> or
+    <a href="http://github.com/grifo/grifo-jquery-plugins/tarball/master">tar</a> formats.
+  </p>
+  <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+    by running:
+    <pre>$ git clone git://github.com/grifo/grifo-jquery-plugins</pre>
+  </p>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/grifo/grifo-jquery-plugins">grifo/grifo-jquery-plugins</a>
-    </div>
-
+  <div class="footer">
+    get the source code on GitHub : <a href="http://github.com/grifo/grifo-jquery-plugins">grifo/grifo-jquery-plugins</a>
   </div>
